# simply-sats

./: .gitattributes  .gitignore  CLAUDE.md  README.md  REVIEW_FINDINGS.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.claude/: launch.json  settings.json
.github/workflows/: build.yml
coverage/: coverage-final.json  index.html
coverage/domain/: index.html  types.ts.html
coverage/hooks/: index.html  useAccountSwitching.ts.html  useBRC100.ts.html  useBrc100Handler.ts.html  useFocusTrap.ts.html  useKeyboardNav.ts.html  useModalKeyboard.ts.html  useTransactionLabels.ts.html  useUtxoManagement.ts.html  useWalletActions.ts.html  useWalletInit.ts.html  useWalletLock.ts.html  useWalletSend.ts.html
coverage/services/: accountDiscovery.ts.html  accounts.ts.html  auditLog.ts.html  autoLock.ts.html  backupRecovery.ts.html  backupReminder.ts.html  brc100.ts.html  cancellation.ts.html  certificates.ts.html  config.ts.html  crypto.ts.html  database-types.ts.html  database.ts.html  deeplink.ts.html  errors.ts.html  index.html  inscription.ts.html  keyDerivation.ts.html  logger.ts.html  messageBox.ts.html  overlay.ts.html  password-validation.ts.html  rateLimiter.ts.html  secureStorage.ts.html  sessionPasswordStore.ts.html  sync.ts.html  tokens.ts.html  wallet.ts.html
design-system/: MASTER.md
docs/: CLTV-LOCK-ISSUE.md  OVERVIEW.md  api-surface.md  architecture.md  decisions.md
docs/checkpoints/: bsv-sdk-integration-2026-03-01.md  mobile-migration-2026-02-25.md  review-remediation-2026-02-17.md  sync-fixes-2025-02-15.md
docs/plans/: 2026-02-04-architecture-refactor.md  2026-02-04-security-remediation.md  2026-02-16-optional-password-design.md  2026-02-16-optional-password-implementation.md  2026-02-16-review4-remediation-design.md  2026-02-16-review4-remediation.md  2026-02-17-a2-walletcontext-split.md  2026-02-17-a3-continuation-result-migration.md  2026-02-17-a3-result-migration.md  2026-02-17-a8-brc100-key-injection.md  2026-02-17-a9-database-layer-move.md  2026-02-17-readme-update-design.md  2026-02-17-readme-update.md  2026-02-17-review-remediation-design.md  2026-02-17-review-remediation.md  2026-02-17-yours-wallet-parity.md  2026-02-18-review9-remediation.md  2026-02-19-silent-background-sync-after-send-lock.md  2026-02-24-mobile-ios-android-design.md  2026-02-24-review-17-remediation.md  2026-03-01-phase4-implementation.md  2026-03-01-phase4-new-capabilities-design.md  2026-03-03-chrome-extension-design.md  2026-03-03-s106-custom-outputs-design.md  2026-03-03-s106-custom-outputs-implementation.md  2026-03-05-brc-maximum-coverage-design.md  2026-03-05-brc-maximum-coverage-implementation.md
docs/reviews/: 2026-02-10-full-review.md  2026-02-10-post-migration-review.md  2026-02-11-full-project-review.md  2026-02-11-full-security-review.md  2026-02-11-post-remediation-review.md  2026-02-15-full-review.md  2026-02-16-full-review.md  2026-02-16-review.md  2026-02-17-full-review-v2.md  2026-02-17-full-review-v4.md  2026-02-17-full-review-v5.md  2026-02-17-full-review-v7.md  2026-02-18-full-review-v6.md  2026-02-23-full-review-v10.md  2026-02-23-full-review-v11.md  2026-02-23-full-review-v12.md  2026-02-23-full-review-v16.md  2026-02-23-full-review-v8.md  (+19 more)
extension/: package-lock.json  package.json  popup.html  tsconfig.json  vite.config.ts
public/: ordinal-viewer.html  ordinal-viewer.js
sdk/: README.md  package-lock.json  package.json
src/: App.css  App.css.bak  App.tsx  AppModals.tsx  AppProviders.tsx  AppTabs.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_address_to_utxos.sql  002_consolidated.sql  002_derived_addresses.sql  002_transaction_amount.sql  003_accounts.sql  004_tokens.sql  005_tagged_keys.sql  006_utxo_pending_status.sql  007_add_timestamps.sql  008_audit_log.sql  009_tx_per_account.sql  010_reset_tx_amounts.sql  011_reset_tx_amounts_v2.sql  012_cleanup_cross_account.sql  013_fix_transaction_labels.sql  014_add_lock_block.sql  015_ordinal_cache.sql  016_derived_address_account.sql  017_lock_utxo_unique.sql  018_transaction_labels_account.sql  019_add_derivation_index.sql  020_add_utxo_frozen.sql  021_nullable_private_key_wif.sql  022_sync_state_per_account.sql  023_enable_wal_mode.sql  024_ordinal_cache_transferred_flag.sql  025_ordinal_cache_block_height.sql  026_address_book.sql  027_address_book_fix_unique.sql  028_brc_beef_support.sql  029_auth_sessions.sql  030_enhanced_certificates.sql  031_pike_contacts.sql  032_basket_enhancements.sql  033_pcw_tables.sql  fresh_install_schema.sql
src-tauri/src/: arc_broadcaster.rs  auth.rs  brc100_signing.rs  brc42_derivation.rs  bsv_sdk_adapter.rs  crypto.rs  http_server.rs  key_derivation.rs  key_store.rs  lib.rs  main.rs  ordinals.rs  rate_limiter.rs  secure_storage.rs  spv.rs  transaction.rs
tasks/: lessons.md  todo.md
(+574 files in other folders)
