[package]
name = "simply-sats"
version = "0.1.0"
description = "A simple BSV wallet"
authors = ["Simply Sats"]
edition = "2021"

[lib]
name = "simply_sats_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
governor = "0.6"
subtle = "2.5"  # Constant-time comparison for security-sensitive operations
url = "2"       # URL parsing for origin extraction

[features]
default = []
# Enable devtools feature for development
devtools = ["tauri/devtools"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
