[package]
name = "simply-sats"
version = "0.1.0"
description = "A simple BSV wallet"
authors = ["Simply Sats"]
edition = "2021"

[lib]
name = "simply_sats_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
rand = "0.8.5"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
base64 = "0.22"
bip32 = { version = "0.5.3", features = ["secp256k1"] }
bip39 = "2.2.2"
secp256k1 = { version = "0.29.1", features = ["global-context"] }  # Used by adapter ECDH — will remove when SDK adds native ECDH
bs58 = { version = "0.5.1", features = ["check"] }  # WIF mainnet prefix validation
hmac = "0.12.1"
hex = "0.4"
zeroize = "1.8.2"
governor = "0.6"
subtle = "2.5"  # Constant-time comparison for security-sensitive operations
url = "2"       # URL parsing for origin extraction
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }  # Pre-init database for fresh installs
dirs = "5"  # Platform-specific directory paths for pre-init

# BSV SDK — comprehensive BSV blockchain toolkit (pinned to known-good commit)
bsv-sdk = { git = "https://github.com/Bittoku/bsv-sdk-rust", rev = "4f2f9ce2016d9e3dbbfa9829d58180fb13429742" }

[dev-dependencies]
ripemd = "0.1.3"  # Only used in adapter byte-comparison tests

[features]
default = []
# S-107: DevTools only in debug builds — never ship to production.
# Use `cargo build --features devtools` or `npm run tauri:dev` (which sets debug profile) for development.
devtools = ["tauri/devtools"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
